--- a/public/index.html
+++ b/public/index.html
@@ -605,7 +605,7 @@
             </div>
             <div class="modal__body__box forgot-pass-box">
                 <p>Quên mật khẩu</p>
-                <form action="/your-login-url" method="POST">
+                <form action="/your-forgot-url" method="POST">
                     <div class="user-box">
                         <input class="login-email" required="" name="email" type="text">
                         <label>Email</label>
@@ -613,6 +613,7 @@
                     <div class="user-box send-code__code">
                         <input class="code-pass" required="" name="code" type="text">
                         <label>Mã khôi phục</label>
+                        <span id="timeLeft">60s</span>
                         <button id="send-code" type="text">Gửi mã</button>
                     </div>
                     <button id="forgot-btn" type="submit">
@@ -620,10 +621,30 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        Gửi yêu cầu
+                        Xác nhận
                     </button>
                 </form>
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
+            </div>
+            <div class="modal__body__box change-pass-box">
+                <p>Thay đổi mật khẩu</p>
+                <form action="/your-change-pass-url" method="POST">
+                    <div class="user-box">
+                        <input class="new-pass" required="" name="email" type="text">
+                        <label>Mật khẩu mới</label>
+                    </div>
+                    <div class="user-box send-code__code">
+                        <input class="confirm-pass" required="" name="code" type="text">
+                        <label>Nhập lại mật khẩu</label>
+                    </div>
+                    <button id="changepass-btn" type="submit">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Xác nhận
+                    </button>
+                </form>
             </div>
             <div class="modal__body__box register-cart">
                 <form action="/your-login-url" method="POST">
