--- a/public/navigation/information_account.html
+++ b/public/navigation/information_account.html
@@ -33,7 +33,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="">
+                    <a href="../index.html">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -177,7 +177,7 @@
                             <a class="change__the__password key__ico">
                                 <i class="fa-solid fa-key"></i>
                             </a>
-                            <ul class="change__the__password__group">
+                            <ul id="change-password" class="change__the__password__group">
                                 <a class="change__the__password__group change__the__password__group__content">
                                     Thay đổi mật khẩu
                                 </a>
@@ -802,18 +802,18 @@
                 </form>
             </div>
 
-            <div class="modal__body__box change-name-box">
+            <div class="modal__body__box change-box">
                 <p class="edit-title">Đổi tên khách hàng</p>
-                <form action="/your-login-url" method="POST">
+                <form id="change-form" action="/your-name-url" method="POST">
                     <div class="user-box">
-                        <input class="new-name" required="" name="newName" type="text">
+                        <input class="new1" required="" name="newName" type="text">
                         <label class="edit-label">Tên mới</label>
                     </div>
                     <div class="submit__row">
                         <button id="submitExit">
                             Thoát
                         </button>
-                        <button id="submitChangeName" type="submit">
+                        <button id="submitChange" type="submit">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -824,6 +824,15 @@
                 </form>
             </div>
 
+            <div class="modal__body__box loader">
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+                <div class="loader-square"></div>
+            </div>
         </div>
     </div>
     <div class="nen_mo"></div>
