add js from bingai

--- a/public/admin.html
+++ b/public/admin.html
@@ -296,7 +296,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="msg-box-right">
+                            <div class="msgr-box-right">
                                 <div class="chatbox">
                                     <div class="chatbox__head">
                                         <div class="first-item">
